# TRP1-Week4-Codebase-Intelligence-Systems

./: .gitignore  README.md  RECONNAISSANCE.md  main.py  out.txt  out2.txt  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  navigator_agent.json  onboarding_brief.md  run_state.json  semantic_report.json
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/cartography/: route.ts
dashboard/src/app/api/query/: route.ts
dashboard/src/components/: DomainChart.tsx  FDEAnswers.tsx  ModuleGraph.tsx  ModuleTable.tsx  NavBar.tsx  OverviewCards.tsx  QueryPanel.tsx  TraceLog.tsx
dashboard/src/lib/: hooks.ts  types.ts
src/: __init__.py  cli.py  orchestrator.py  tracing.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: __init__.py  graph.py  lineage.py  module.py
src/trp1_week3_codebase_intelligence_systems.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agents.py  test_knowledge_graph_deserialization.py
