[project]
name = "trp1-week4-brownfield-cartographer"
version = "0.1.0"
description = "Brownfield Cartographer — multi-agent codebase intelligence system for rapid FDE onboarding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"langgraph>=0.2.45",
	"networkx>=3.4",
	"numpy>=2.2",
	"pydantic>=2.10",
	"pyyaml>=6.0.2",
	"sqlglot>=26.20.0",
	"tree-sitter>=0.23",
	"tree-sitter-language-pack>=0.6.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-cov>=5.0",
]

[project.scripts]
cartographer = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
